--- a/exercises/3.1/conteudo_pt2.html
+++ b/exercises/3.1/conteudo_pt2.html
@@ -15,7 +15,8 @@
         <li>Eric</li>
         <li>Armando</li>
         </ul>
-    <img scr="https://uploads-ssl.webflow.com/5fba98ad987231cf0efa3d58/5fbabf81558fb608266e553f_Group%2013-p-800.png">
+    <img src ="https://uploads-ssl.webflow.com/5fba98ad987231cf0efa3d58/5fc649b5c2938519229341ac_Group%2018.png" width="300px" alt="imagem url">
+    <img src ="vscodium.png" width="400px" alt="imagem local">
   </body>
   
 </html>
