Identacao do codigo

--- a/exercises/3.1/conteudo_pt2.html
+++ b/exercises/3.1/conteudo_pt2.html
@@ -4,19 +4,19 @@
 
   <head>
     <meta charset="UTF-8">
-    <title>HTML</title>
+    <title>Exercicio dia 3.1</title>
   </head>
 
   <body>
-    <h1>Exercícios</h1>
+    <h1>Lista de amizades</h1>
         <ul>
-        <li>Igor</li>
-        <li>Buc</li>
-        <li>Eric</li>
-        <li>Armando</li>
+          <li>Igor Duarte</li>
+          <li>Bruno Gomes</li>
+          <li>Eric Kreis</li>
+          <li>Armando Guerra</li>
         </ul>
-    <img src ="https://uploads-ssl.webflow.com/5fba98ad987231cf0efa3d58/5fc649b5c2938519229341ac_Group%2018.png" width="300px" alt="imagem url">
-    <img src ="vscodium.png" width="400px" alt="imagem local">
+      <img width="300px" alt="imagem url" src ="https://uploads-ssl.webflow.com/5fba98ad987231cf0efa3d58/5fc649b5c2938519229341ac_Group%2018.png">
+      <img width="400px" alt="imagem local" src ="./Imagens/vscodium.png">
   </body>
   
-</html>
+</html
