--- a/exercises/3.1/conteudo_pt2.html
+++ b/exercises/3.1/conteudo_pt2.html
@@ -9,14 +9,14 @@
 
   <body>
     <h1>Lista de amizades</h1>
-        <ul>
-          <li>Igor Duarte</li>
-          <li>Bruno Gomes</li>
-          <li>Eric Kreis</li>
-          <li>Armando Guerra</li>
-        </ul>
-      <img width="300px" alt="imagem url" src ="https://uploads-ssl.webflow.com/5fba98ad987231cf0efa3d58/5fc649b5c2938519229341ac_Group%2018.png">
-      <img width="400px" alt="imagem local" src ="./Imagens/vscodium.png">
+    <ul>
+      <li>Igor Duarte</li>
+      <li>Bruno Gomes</li>
+      <li>Eric Kreis</li>
+      <li>Armando Guerra</li>
+    </ul>
+    <img width="300px" alt="imagem url" src ="https://uploads-ssl.webflow.com/5fba98ad987231cf0efa3d58/5fc649b5c2938519229341ac_Group%2018.png">
+    <img width="400px" alt="imagem local" src ="./Imagens/vscodium.png">
   </body>
   
-</html
+</html>
